--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -29,7 +29,7 @@
     border-radius: 2px;
 
     display: inline-flex;
-    align-items: center;
+    justify-content: center;
 
     :first-child {
       display: inline-flex;
