--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -73,7 +73,7 @@
   }
 
   @each $name, $color in variables.$colors {
-    &.#{$name} {
+    &.#{'' + $name} {
       background-color: $color;
       color: $color;
 
