--- a/src/styles/components/avatar.scss
+++ b/src/styles/components/avatar.scss
@@ -2,10 +2,6 @@
 .avatar {
   background-color: transparent;
 
-  font-size: 24px;
-  height: 24px;
-  line-height: 24px;
-
   padding: 0;
   user-select: none;
   display: flex;
@@ -16,6 +12,7 @@
   border-radius: 50%;
   height: 64px;
   width: 64px;
+  font-size: 24px;
   overflow: hidden;
   letter-spacing: 0.18px;
 
@@ -26,6 +23,27 @@
     &.#{'' + $name} {
       background-color: $color;
       color: variables.$white;
+
+      > div {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+        border: 2px solid $color;
+        position: relative;
+        overflow: hidden;
+
+        > img {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+      }
     }
   }
 }
