update transition speed

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -16,3 +16,7 @@ $cuts: 8, 16, 24, 32, 40, 48;
 @mixin input-transition {
   transition: all 75ms;
 }
+
+@mixin input-transition-long {
+  transition: all 250ms;
+}
