--- a/src/styles/components/avatar.scss
+++ b/src/styles/components/avatar.scss
@@ -1,15 +1,14 @@
 @use '../abstracts/variables';
 .avatar {
   padding: 0;
-  user-select: none;
   white-space: nowrap;
-
-  border-radius: 50%;
-  height: 64px;
-  width: 64px;
   font-size: 24px;
   overflow: hidden;
   letter-spacing: 0.18px;
+
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
 
   background: variables.$primary;
   color: variables.$white;
@@ -23,18 +22,17 @@
         align-items: center;
         justify-content: center;
 
+        position: relative;
         width: 100%;
         height: 100%;
-        border-radius: 100%;
-        position: relative;
-        overflow: hidden;
 
-        > img {
-          width: 100%;
-          height: 100%;
+        img {
           position: absolute;
           top: 0;
           left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
         }
       }
     }
