--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,4 +1,5 @@
 @use "sass:list";
+@use "sass:math";
 @use './variables';
 
 $cuts: 8, 16, 24, 32, 40, 48;
@@ -19,4 +20,25 @@ $cuts: 8, 16, 24, 32, 40, 48;
 
 @mixin input-transition-long {
   transition: all 250ms;
+}
+
+@mixin chamfer($cut-length, $color, $border-width: 0, $border-color: $color) {
+  position: relative;
+  background: linear-gradient(
+    315deg,
+    transparent #{list.nth($cuts, $cut-length)}px,
+    #{$border-color} #{list.nth($cuts, $cut-length)}px
+  );
+  > div:first-of-type {
+    position: absolute;
+    background: linear-gradient(
+      315deg,
+      transparent #{list.nth($cuts, $cut-length)}px,
+      #{$color} #{list.nth($cuts, $cut-length)}px
+    );
+    height: calc(100% - calc(#{$border-width} * 2px));
+    width: calc(100% - calc(#{$border-width} * 2px));
+    top: #{$border-width}px;
+    left: #{$border-width}px;
+  }
 }
