--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,18 +1,9 @@
 @use "sass:list";
-@use "sass:math";
 @use './variables';
 
 $cuts: 8, 16, 24, 32, 40, 48;
-
-@mixin miter($i, $inner: false) {
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - #{list.nth($cuts, $i)}px + #{if($inner, 0.5px, 0px)}),
-    calc(100% - #{list.nth($cuts, $i)}px + #{if($inner, 0.5px, 0px)}) 100%,
-    0 100%
-  );
-}
+$bottom: -50, -40, -30, -20, -20, -20;
+$right: -12.5, -14.5, -16.5, -18.5, -10.5, -2.5;
 
 @mixin input-transition {
   transition: all 75ms;
@@ -22,32 +13,116 @@ $cuts: 8, 16, 24, 32, 40, 48;
   transition: all 250ms;
 }
 
-@mixin chamfer(
-  $cut-length,
-  $border-radius,
-  $color,
-  $border-width: 0,
-  $border-color: $color
-) {
-  display: inline-block;
+@mixin miter($cut-length, $background-color: variables.$white) {
   position: relative;
-  border-radius: #{$border-radius}px;
-  background: linear-gradient(
-    315deg,
-    transparent #{list.nth($cuts, $cut-length)}px,
-    #{$border-color} #{list.nth($cuts, $cut-length)}px
-  );
-  > div:first-of-type {
-    position: absolute;
-    border-radius: #{$border-radius}px;
-    background: linear-gradient(
-      315deg,
-      transparent #{list.nth($cuts, $cut-length)}px,
-      #{$color} #{list.nth($cuts, $cut-length)}px
+
+  > :first-child {
+    background-color: $background-color;
+    clip-path: polygon(
+      0 0,
+      100% 0,
+      100% calc(100% - #{list.nth($cuts, $cut-length)}px),
+      calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
+      0 100%
     );
-    height: calc(100% - calc(#{$border-width} * 2px));
-    width: calc(100% - calc(#{$border-width} * 2px));
-    top: #{$border-width}px;
-    left: #{$border-width}px;
+    height: 100%;
+    width: 100%;
+    &:after {
+      content: '';
+      width: 2px;
+      height: 70px;
+      bottom: #{list.nth($bottom, $cut-length)}px;
+      right: #{list.nth($right, $cut-length)}px;
+      position: absolute;
+      border-color: inherit;
+      border: inherit;
+      border-right: none;
+      border-bottom: none;
+      border-top: none;
+      margin-top: inherit;
+      margin-bottom: inherit;
+      margin-left: inherit;
+      margin-right: inherit;
+      transform: rotate(45deg);
+      transform-origin: top left;
+    }
+  }
+}
+
+@mixin miter-border(
+  $border-width: 1,
+  $border-color: transparent,
+  $border-radius: 4
+) {
+  > :first-child {
+    border: #{$border-width}px solid $border-color;
+    border-radius: #{$border-radius}px;
+  }
+}
+
+@mixin miter-shadow($hard: false) {
+  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.1))
+    drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.1));
+
+  @if $hard {
+    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2))
+      drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.2));
+  }
+}
+
+@mixin miter-interactive {
+  cursor: pointer;
+  transition: all 250ms;
+
+  &:hover,
+  &:focus {
+    margin-top: -4px;
+    filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.1))
+      drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.1));
+  }
+}
+
+@mixin miter-on-hover($cut-length, $background-color: variables.$white) {
+  position: relative;
+  > :first-child {
+    background-color: $background-color;
+    transition: clip-path 250ms;
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 100% 100%, 0% 100%);
+    height: 100%;
+    width: 100%;
+    &:after {
+      content: '';
+      height: 0;
+      width: 0;
+      transition: all 250ms;
+    }
+    &:hover {
+      clip-path: polygon(
+        0 0,
+        100% 0,
+        100% calc(100% - #{list.nth($cuts, $cut-length)}px),
+        calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
+        0 100%
+      );
+      &:after {
+        content: '';
+        width: 2px;
+        height: 70px;
+        bottom: #{list.nth($bottom, $cut-length)}px;
+        right: #{list.nth($right, $cut-length)}px;
+        position: absolute;
+        border-color: inherit;
+        border: inherit;
+        border-right: none;
+        border-bottom: none;
+        border-top: none;
+        margin-top: inherit;
+        margin-bottom: inherit;
+        margin-left: inherit;
+        margin-right: inherit;
+        transform: rotate(45deg);
+        transform-origin: top left;
+      }
+    }
   }
 }
