--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -2,17 +2,14 @@
 @use '../abstracts/mixins';
 
 .card {
-  @include mixins.input-transition;
   @include mixins.miter(2);
   @include mixins.miter-border(1, variables.$grey-4, 4);
 
   display: block;
   height: min-content;
-  padding: 1px;
   position: relative;
 
-  > section {
-    @include mixins.miter(2);
+  > div > section {
     align-content: flex-start;
     background-color: variables.$white;
     border-radius: 3px;
