missed a bit when reverting button css

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -101,8 +101,9 @@
   }
 
   &.outlined {
-    color: variables.$grey-1;
     background-color: variables.$grey-4;
+    color: variables.$grey-1;
+    transition: background-color 0s, clip-path 0s !important;
 
     &:active {
       background-color: transparent;
