--- a/src/assets/fonts/variables.scss
+++ b/src/assets/fonts/variables.scss
@@ -1,13 +1,381 @@
-$prefect-font-family: 'prefect-icons' !default;
-$prefect-font-path: 'fonts' !default;
+$prefect-icon-font-family: 'prefect-icons' !default;
+$prefect-icon-font-path: 'fonts' !default;
 
-$pi-arrow: '\e900';
-$pi-divide: '\e901';
-$pi-fire: '\e902';
-$pi-menu: '\e903';
-$pi-key: '\e904';
-$pi-numeric-keypad: '\e905';
-$pi-pin: '\e906';
-$pi-sand-clock: '\e907';
-$pi-settings: '\e908';
-$pi-shut-down: '\e909';
+$pi-362: '\e900';
+$pi-Add-Layer: '\e901';
+$pi-Add-Pin: '\e902';
+$pi-Add: '\e903';
+$pi-Alert-Crossed: '\e904';
+$pi-Alert-Ringing: '\e905';
+$pi-Alert: '\e906';
+$pi-Arrow: '\e907';
+$pi-Audio-Jacks: '\e908';
+$pi-Ballpen: '\e909';
+$pi-Book: '\e90a';
+$pi-Bookmark-in-a-Box: '\e90b';
+$pi-Bookmark: '\e90c';
+$pi-Box-Download: '\e90d';
+$pi-Box-Upload: '\e90e';
+$pi-Box: '\e90f';
+$pi-Boxes: '\e910';
+$pi-Brightness-Full: '\e911';
+$pi-Brightness-Half: '\e912';
+$pi-Brightness-Low: '\e913';
+$pi-Brightness-Question: '\e914';
+$pi-Brightness-Warning: '\e915';
+$pi-Bug-Check: '\e916';
+$pi-Bug-Crossed: '\e917';
+$pi-Bug-Warning: '\e918';
+$pi-Bug-X: '\e919';
+$pi-Bug: '\e91a';
+$pi-Calculator: '\e91b';
+$pi-CD-Warning: '\e91c';
+$pi-CD: '\e91d';
+$pi-Check-in-a-Circle: '\e91e';
+$pi-Checkmark: '\e91f';
+$pi-Compass: '\e920';
+$pi-Dark: '\e921';
+$pi-Dashboard: '\e922';
+$pi-Delete-Forever: '\e923';
+$pi-Delete: '\e924';
+$pi-Divide: '\e925';
+$pi-Drag-Dots: '\e926';
+$pi-Drag-Lines: '\e927';
+$pi-Drop-Check: '\e928';
+$pi-Drop-Crossed: '\e929';
+$pi-Drop: '\e92a';
+$pi-Earth: '\e92b';
+$pi-Eye-Crossed: '\e92c';
+$pi-Eye-Minus: '\e92d';
+$pi-Eye-Open: '\e92e';
+$pi-Eye-Plus: '\e92f';
+$pi-Eye-Warning: '\e930';
+$pi-Face-ID: '\e931';
+$pi-Filters-Horizontal: '\e932';
+$pi-Filters-Vertical: '\e933';
+$pi-Fingerprint-ID: '\e934';
+$pi-Fire: '\e935';
+$pi-Flag-5: '\e936';
+$pi-Flag-7: '\e937';
+$pi-Focus: '\e938';
+$pi-Forbidden: '\e939';
+$pi-Globe: '\e93a';
+$pi-Grid-11: '\e93b';
+$pi-Grid-13: '\e93c';
+$pi-Grid-15: '\e93d';
+$pi-Grid-17: '\e93e';
+$pi-Grid-19: '\e93f';
+$pi-Grid-Crossed: '\e940';
+$pi-Grid-Round: '\e941';
+$pi-Grid-Sharp: '\e942';
+$pi-Grid-View: '\e943';
+$pi-Grid: '\e944';
+$pi-Hamburger-Menu: '\e945';
+$pi-Hashtag: '\e946';
+$pi-Home: '\e947';
+$pi-Info-i: '\e948';
+$pi-Info-Question-Mark: '\e949';
+$pi-Info: '\e94a';
+$pi-Key: '\e94b';
+$pi-Label: '\e94c';
+$pi-Layers-Inverted: '\e94d';
+$pi-Layers: '\e94e';
+$pi-Like: '\e94f';
+$pi-List-In-a-Box-Round: '\e950';
+$pi-List-In-a-Box-Sharp: '\e951';
+$pi-List-Round: '\e952';
+$pi-List-Sharp: '\e953';
+$pi-Loader: '\e954';
+$pi-Lock: '\e955';
+$pi-Map: '\e956';
+$pi-Microphone-Crossed: '\e957';
+$pi-Microphone: '\e958';
+$pi-Minus: '\e959';
+$pi-More-Horizontal-5: '\e95a';
+$pi-More-Horizontal-7: '\e95b';
+$pi-More-Plus: '\e95c';
+$pi-More-Vertical-5: '\e95d';
+$pi-More-Vertical-7: '\e95e';
+$pi-Numeric-Keypad: '\e95f';
+$pi-Pen-5: '\e960';
+$pi-Pen-7: '\e961';
+$pi-Pen-Crossed: '\e962';
+$pi-Pin-Check: '\e963';
+$pi-Pin-Crossed: '\e964';
+$pi-Pin: '\e965';
+$pi-Pin-1: '\e966';
+$pi-Plus-in-a-box: '\e967';
+$pi-Plus: '\e968';
+$pi-Radar-5: '\e969';
+$pi-Radar-7: '\e96a';
+$pi-RSS: '\e96b';
+$pi-Sand-Clock: '\e96c';
+$pi-Search-Map: '\e96d';
+$pi-Search: '\e96e';
+$pi-Select-All: '\e96f';
+$pi-Send-to: '\e970';
+$pi-Settings: '\e971';
+$pi-Share: '\e972';
+$pi-Shield-Question: '\e973';
+$pi-Shield-Warning: '\e974';
+$pi-Shield-with-Check-5: '\e975';
+$pi-Shield-with-Check-7: '\e976';
+$pi-Shield-with-X-5: '\e977';
+$pi-Shield-with-X-7: '\e978';
+$pi-Shield: '\e979';
+$pi-Shut-Down: '\e97a';
+$pi-Split-View: '\e97b';
+$pi-Star: '\e97c';
+$pi-Stop: '\e97d';
+$pi-Tag: '\e97e';
+$pi-Target-5: '\e97f';
+$pi-Target-7: '\e980';
+$pi-Target-Crossed: '\e981';
+$pi-Target: '\e982';
+$pi-Three-Stars: '\e983';
+$pi-Triangle-Down: '\e984';
+$pi-Triangle-Up: '\e985';
+$pi-Two-Radars-Crossed: '\e986';
+$pi-Two-Radars: '\e987';
+$pi-Unlike: '\e988';
+$pi-Unlock: '\e989';
+$pi-Vertical-Split-Left: '\e98a';
+$pi-Vertical-Split-Right: '\e98b';
+$pi-Warning-Triangle: '\e98c';
+$pi-Warning: '\e98d';
+$pi-X-in-a-Circle: '\e98e';
+$pi-X: '\e98f';
+$pi-Zoom-In: '\e990';
+$pi-Zoom-Out: '\e991';
+$pi-Add-Alarm: '\e992';
+$pi-Alarm-Check: '\e993';
+$pi-Alarm-Settings: '\e994';
+$pi-Alarm-X: '\e995';
+$pi-Alarm: '\e996';
+$pi-Calendar-Add-Event: '\e997';
+$pi-Calendar-Check: '\e998';
+$pi-Calendar-Event: '\e999';
+$pi-Calendar-Text: '\e99a';
+$pi-Calendar-X: '\e99b';
+$pi-Calendar: '\e99c';
+$pi-Clock: '\e99d';
+$pi-Stopwatch-Crossed: '\e99e';
+$pi-Stopwatch: '\e99f';
+$pi-Add-Camera: '\e9a0';
+$pi-Add-Image: '\e9a1';
+$pi-Add-to-Playlist: '\e9a2';
+$pi-Added-to-Playlist: '\e9a3';
+$pi-Auto-White-Balance: '\e9a4';
+$pi-Brush: '\e9a5';
+$pi-Burst-Mode: '\e9a6';
+$pi-Camera-Crossed: '\e9a7';
+$pi-Camera-Roll: '\e9a8';
+$pi-Camera-Vintage: '\e9a9';
+$pi-Camera: '\e9aa';
+$pi-Camera-1: '\e9ab';
+$pi-Circle-Selection: '\e9ac';
+$pi-Clapboard-Check: '\e9ad';
+$pi-Clapboard-Crossed: '\e9ae';
+$pi-Clapboard-Download: '\e9af';
+$pi-Clapboard-Upload: '\e9b0';
+$pi-Clapboard-Warning: '\e9b1';
+$pi-Clapboard-X: '\e9b2';
+$pi-Clapboard: '\e9b3';
+$pi-Cloudy-White-Balance: '\e9b4';
+$pi-Collapse: '\e9b5';
+$pi-Color-Palette: '\e9b6';
+$pi-Color-Picker: '\e9b7';
+$pi-Crop: '\e9b8';
+$pi-Double-Note: '\e9b9';
+$pi-Expand: '\e9ba';
+$pi-Fast-Backward: '\e9bb';
+$pi-Fast-Forward: '\e9bc';
+$pi-Film-Check: '\e9bd';
+$pi-Film-Download: '\e9be';
+$pi-Film-Lock: '\e9bf';
+$pi-Film-Play: '\e9c0';
+$pi-Film-Question: '\e9c1';
+$pi-Film-Upload: '\e9c2';
+$pi-Film-Warning: '\e9c3';
+$pi-Film-X: '\e9c4';
+$pi-Film: '\e9c5';
+$pi-Flash-Drive: '\e9c6';
+$pi-Headphones: '\e9c7';
+$pi-Headset-Crossed: '\e9c8';
+$pi-Headset: '\e9c9';
+$pi-Image: '\e9ca';
+$pi-Incandescent-White-Balance: '\e9cb';
+$pi-Iridescent-White-Balance: '\e9cc';
+$pi-Layers-Crossed: '\e9cd';
+$pi-Layers1: '\e9ce';
+$pi-Macro: '\e9cf';
+$pi-Music-Playlist: '\e9d0';
+$pi-Note: '\e9d1';
+$pi-Panorama-Horizontal: '\e9d2';
+$pi-Panorama-Vertical: '\e9d3';
+$pi-Panorama-Wide-Angle: '\e9d4';
+$pi-Pause: '\e9d5';
+$pi-Picture-Frame: '\e9d6';
+$pi-Play-Playlist: '\e9d7';
+$pi-Play: '\e9d8';
+$pi-Record: '\e9d9';
+$pi-Rectangle-Selection: '\e9da';
+$pi-Resize: '\e9db';
+$pi-Save: '\e9dc';
+$pi-Scissors: '\e9dd';
+$pi-Shutter: '\e9de';
+$pi-Skip-Next: '\e9df';
+$pi-Skip-Previous: '\e9e0';
+$pi-Speaker-9: '\e9e1';
+$pi-Speaker-11: '\e9e2';
+$pi-Speaker-13: '\e9e3';
+$pi-Speaker-15: '\e9e4';
+$pi-Speaker: '\e9e5';
+$pi-Stop1: '\e9e6';
+$pi-Sunny-White-Balance: '\e9e7';
+$pi-Switch-Camera: '\e9e8';
+$pi-Switch-Video: '\e9e9';
+$pi-Texture: '\e9ea';
+$pi-Timelapse: '\e9eb';
+$pi-USB: '\e9ec';
+$pi-Vector-Curve: '\e9ed';
+$pi-Vector-Selection: '\e9ee';
+$pi-Vignette: '\e9ef';
+$pi-Add-Document: '\e9f0';
+$pi-Add-Folder: '\e9f1';
+$pi-Bookmark-Folder: '\e9f2';
+$pi-Close-Folder: '\e9f3';
+$pi-Document-with-Lines: '\e9f4';
+$pi-Document: '\e9f5';
+$pi-Download-Document: '\e9f6';
+$pi-Download: '\e9f7';
+$pi-Folder: '\e9f8';
+$pi-Open-Folder-Add: '\e9f9';
+$pi-Open-Folder: '\e9fa';
+$pi-Search-Document: '\e9fb';
+$pi-Star-Folder: '\e9fc';
+$pi-Upload-Document: '\e9fd';
+$pi-Upload: '\e9fe';
+$pi-Align: '\e9ff';
+$pi-Bold: '\ea00';
+$pi-Bullet-Points-Dots: '\ea01';
+$pi-Bullet-Points-Numbers: '\ea02';
+$pi-Central-Align: '\ea03';
+$pi-Clear-Formatting: '\ea04';
+$pi-Double-Check: '\ea05';
+$pi-Flip-to-Back: '\ea06';
+$pi-Flip-to-Front: '\ea07';
+$pi-Indent-Text-Left: '\ea08';
+$pi-Indent-Text-Right: '\ea09';
+$pi-Italic-Align: '\ea0a';
+$pi-Italic: '\ea0b';
+$pi-Left-Align: '\ea0c';
+$pi-Letter-Check: '\ea0d';
+$pi-Letter-Color: '\ea0e';
+$pi-Move-Paragraph-Left: '\ea0f';
+$pi-Move-Paragraph-Right: '\ea10';
+$pi-Notepad-Check: '\ea11';
+$pi-Notepad-Crossed: '\ea12';
+$pi-Notepad-X: '\ea13';
+$pi-Notepad: '\ea14';
+$pi-Paragraph: '\ea15';
+$pi-Quote: '\ea16';
+$pi-Right-Align: '\ea17';
+$pi-Special-Characters: '\ea18';
+$pi-Table-27: '\ea19';
+$pi-Table-29: '\ea1a';
+$pi-Table-31: '\ea1b';
+$pi-Table-33: '\ea1c';
+$pi-Table-35: '\ea1d';
+$pi-Table-37: '\ea1e';
+$pi-Table-39: '\ea1f';
+$pi-Table-41: '\ea20';
+$pi-Table-43: '\ea21';
+$pi-Table-45: '\ea22';
+$pi-Table-47: '\ea23';
+$pi-Table-49: '\ea24';
+$pi-Table-51: '\ea25';
+$pi-Text-Color: '\ea26';
+$pi-Text-Crossed: '\ea27';
+$pi-Text-Fill: '\ea28';
+$pi-Text-Size: '\ea29';
+$pi-Underline: '\ea2a';
+$pi-Arrow-Bottom-Left: '\ea2b';
+$pi-Arrow-Bottom-Right: '\ea2c';
+$pi-Arrow-Down-In-a-Circle: '\ea2d';
+$pi-Arrow-Down-with-Line: '\ea2e';
+$pi-Arrow-Down: '\ea2f';
+$pi-Arrow-in-Box-Down: '\ea30';
+$pi-Arrow-in-Box-Left: '\ea31';
+$pi-Arrow-in-Box-Right: '\ea32';
+$pi-Arrow-in-Box-Up: '\ea33';
+$pi-Arrow-Left: '\ea34';
+$pi-Arrow-Right: '\ea35';
+$pi-Arrow-Up-In-a-Circle: '\ea36';
+$pi-Arrow-Up-with-Line: '\ea37';
+$pi-Arrow-Up: '\ea38';
+$pi-Arrows-Horizontal: '\ea39';
+$pi-Arrows-Vertical: '\ea3a';
+$pi-Backward: '\ea3b';
+$pi-Broken-Arrow-Down-Left: '\ea3c';
+$pi-Broken-Arrow-Down-Right: '\ea3d';
+$pi-Broken-Arrow-Up: '\ea3e';
+$pi-Code-Arrows: '\ea3f';
+$pi-Crossed-Arrows: '\ea40';
+$pi-Diagonal-Arrows-5: '\ea41';
+$pi-Diagonal-Arrows-7: '\ea42';
+$pi-Download-Arrow: '\ea43';
+$pi-Expand-Rotated: '\ea44';
+$pi-Expand1: '\ea45';
+$pi-Forward: '\ea46';
+$pi-Full-Arrow-Down: '\ea47';
+$pi-Full-Arrow-Left: '\ea48';
+$pi-Full-Arrow-Right: '\ea49';
+$pi-Full-Arrow-Up: '\ea4a';
+$pi-High-Priority: '\ea4b';
+$pi-Joining-Arrows-5: '\ea4c';
+$pi-Joining-Arrows-7: '\ea4d';
+$pi-Loading-5: '\ea4e';
+$pi-Loading-7: '\ea4f';
+$pi-Low-Priority: '\ea50';
+$pi-Move: '\ea51';
+$pi-Redo: '\ea52';
+$pi-Refresh-5: '\ea53';
+$pi-Refresh-7: '\ea54';
+$pi-Refresh-Rectangular: '\ea55';
+$pi-Separating-Arrows: '\ea56';
+$pi-Small-Arrow-Down: '\ea57';
+$pi-Small-Arrow-Up: '\ea58';
+$pi-Small-Arrows-Joining: '\ea59';
+$pi-Small-Arrows-Separating: '\ea5a';
+$pi-Swap-Calls-Arrows: '\ea5b';
+$pi-Undo: '\ea5c';
+$pi-Upload-Arrow: '\ea5d';
+$pi-Wrap-Text-Down: '\ea5e';
+$pi-Wrap-Text-Up: '\ea5f';
+$pi-Zoom-Map-Out: '\ea60';
+$pi-Add-Cart: '\ea61';
+$pi-ATM-Dollar: '\ea62';
+$pi-ATM: '\ea63';
+$pi-Bag-of-Cash: '\ea64';
+$pi-Bank: '\ea65';
+$pi-Bar-Graph: '\ea66';
+$pi-Chart-Arrow-Down: '\ea67';
+$pi-Chart-Arrow-Up: '\ea68';
+$pi-Chart-Arrow: '\ea69';
+$pi-Credit-Card: '\ea6a';
+$pi-Discount: '\ea6b';
+$pi-Dollar-Coin: '\ea6c';
+$pi-Dollar-Crossed: '\ea6d';
+$pi-Dollar: '\ea6e';
+$pi-Euro: '\ea6f';
+$pi-Pie-Chart: '\ea70';
+$pi-Pound: '\ea71';
+$pi-Safe: '\ea72';
+$pi-Shopping-Cart-5: '\ea73';
+$pi-Shopping-Cart-7: '\ea74';
+$pi-Stock-Chart: '\ea75';
+$pi-Suitcase: '\ea76';
+$pi-Tag-with-Heart: '\ea77';
+$pi-Wallet: '\ea78';
+$pi-Yen: '\ea79';
