some keyboard nav ability

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -30,7 +30,7 @@
     }
     &.disabled {
       background-color: variables.$grey-5;
-      cursor: not-allowed;
+      cursor: not-allowed !important;
       color: variables.$inactive !important;
       &::after {
         border-color: variables.$grey-4;
