--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -5,7 +5,7 @@
   @include mixins.input-transition;
 
   &:not(.active):not(.icon) {
-    @include mixins.miter-original(1);
+    @include mixins.miter(1);
   }
 
   background-color: transparent;
@@ -19,10 +19,6 @@
 
   &:focus-visible {
     outline: none;
-  }
-
-  &:not(.icon) > div {
-    @include mixins.miter-original(1);
   }
 
   > div {
@@ -68,7 +64,6 @@
 
   &.disabled {
     cursor: not-allowed;
-    background-color: variables.$disabled !important;
     color: variables.$grey-4 !important;
 
     &:not(.outlined) > div {
@@ -101,33 +96,18 @@
   }
 
   &.outlined {
-    background-color: variables.$grey-4;
     color: variables.$grey-1;
-    transition: background-color 0s, clip-path 0s !important;
 
     &:active {
       background-color: transparent;
     }
 
     &:not(.active):not(.icon) {
-      @include mixins.miter-original(1);
+      @include mixins.miter-border(1, 1, variables.$grey-4);
     }
 
     &.hovered > div {
       background-color: variables.$grey-5;
-    }
-
-    &:not(.icon) > div {
-      @include mixins.miter-original(1, true);
-    }
-
-    > div {
-      background-color: variables.$white;
-      height: calc(100% - 2px);
-
-      top: 0;
-      left: 1px;
-      width: calc(100% - 2px);
     }
   }
 }
