--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -9,7 +9,7 @@
   height: min-content;
   position: relative;
 
-  > div > section {
+  > section {
     align-content: flex-start;
     background-color: variables.$white;
     border-radius: 3px;
