--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,5 +1,6 @@
 @use "sass:list";
 @use "sass:map";
+@use "sass:math";
 @use './variables';
 
 $cuts: 8, 16, 24, 32, 40, 48;
@@ -31,18 +32,13 @@ $shadows: (
 
 @mixin miter($cut-length) {
   position: relative;
-
-  > :first-child {
-    clip-path: polygon(
-      0 0,
-      100% 0,
-      100% calc(100% - #{list.nth($cuts, $cut-length)}px),
-      calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
-      0 100%
-    );
-    height: 100%;
-    width: 100%;
-  }
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - #{list.nth($cuts, $cut-length)}px),
+    calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
+    0 100%
+  );
 }
 
 @mixin miter-border(
@@ -51,14 +47,68 @@ $shadows: (
   $border-color: transparent,
   $border-radius: 4
 ) {
-  > :first-child {
-    border: #{$border-width}px solid $border-color;
-    border-radius: #{$border-radius}px;
+  border: #{$border-width}px solid $border-color;
+  border-radius: #{$border-radius}px;
+  &:after {
+    $cut: list.nth($cuts, $cut-length);
+    $hypotenuse: math.hypot($cut, $cut);
+    content: '';
+    height: #{$hypotenuse}px;
+    width: 0;
+    bottom: -#{$border-width}px;
+    right: #{$cut - ($border-width)}px;
+    position: absolute;
+    border-color: inherit;
+    border: inherit;
+    border-right: none;
+    border-bottom: none;
+    border-top: none;
+    transform: rotate(45deg);
+    transform-origin: bottom;
+  }
+}
+
+@mixin miter-shadow($shadow: md) {
+  filter: #{map.get($shadows, $shadow)};
+}
+
+@mixin miter-interactive($shadow: md) {
+  &:not(.disabled) {
+    cursor: pointer;
+    transition: all 250ms;
+    &:hover,
+    &:focus {
+      filter: #{map.get($shadows, $shadow)};
+    }
+  }
+}
+
+@mixin miter-on-hover($cut-length, $background-color: variables.$white) {
+  position: relative;
+  background-color: $background-color;
+  transition: clip-path 250ms;
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 100% 100%, 0% 100%);
+  height: 100%;
+  width: 100%;
+  &:after {
+    content: '';
+    height: 0;
+    width: 0;
+    transition: all 250ms;
+  }
+  &:hover {
+    clip-path: polygon(
+      0 0,
+      100% 0,
+      100% calc(100% - #{list.nth($cuts, $cut-length)}px),
+      calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
+      0 100%
+    );
     &:after {
       content: '';
       width: 1px;
       height: 70px;
-      bottom: calc(#{list.nth($bottom, $cut-length)}px + #{$border-width}px);
+      bottom: #{list.nth($bottom, $cut-length)}px;
       right: 0px;
       position: absolute;
       border-color: inherit;
@@ -72,67 +122,6 @@ $shadows: (
       margin-right: inherit;
       transform: rotate(225deg);
       transform-origin: bottom right;
-    }
-  }
-}
-
-@mixin miter-shadow($shadow: md) {
-  filter: #{map.get($shadows, $shadow)};
-}
-
-@mixin miter-interactive($shadow: md) {
-  &:not(.disabled) {
-    cursor: pointer;
-    transition: all 250ms;
-
-    &:hover,
-    &:focus {
-      filter: #{map.get($shadows, $shadow)};
-    }
-  }
-}
-
-@mixin miter-on-hover($cut-length, $background-color: variables.$white) {
-  position: relative;
-  > :first-child {
-    background-color: $background-color;
-    transition: clip-path 250ms;
-    clip-path: polygon(0 0, 100% 0%, 100% 100%, 100% 100%, 0% 100%);
-    height: 100%;
-    width: 100%;
-    &:after {
-      content: '';
-      height: 0;
-      width: 0;
-      transition: all 250ms;
-    }
-    &:hover {
-      clip-path: polygon(
-        0 0,
-        100% 0,
-        100% calc(100% - #{list.nth($cuts, $cut-length)}px),
-        calc(100% - #{list.nth($cuts, $cut-length)}px) 100%,
-        0 100%
-      );
-      &:after {
-        content: '';
-        width: 1px;
-        height: 70px;
-        bottom: #{list.nth($bottom, $cut-length)}px;
-        right: 0px;
-        position: absolute;
-        border-color: inherit;
-        border: inherit;
-        border-right: none;
-        border-bottom: none;
-        border-top: none;
-        margin-top: inherit;
-        margin-bottom: inherit;
-        margin-left: inherit;
-        margin-right: inherit;
-        transform: rotate(225deg);
-        transform-origin: bottom right;
-      }
     }
   }
 }
