--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -2,63 +2,47 @@
 @use '../abstracts/mixins';
 
 .tag {
-  @include mixins.miter-original(1);
+  @include mixins.miter(1);
   border: none;
   border-radius: 3px;
   padding: 0;
   user-select: none;
   white-space: nowrap;
   cursor: default;
-  display: inline-block;
-
-  &:not(.outlined) {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-  }
-
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   height: 26px;
   cursor: default;
   font-size: 11px;
   vertical-align: middle;
-
   background-color: variables.$grey-2;
   color: variables.$text--white;
+  padding-left: 23px;
+  padding-right: 23px;
 
   &:focus-visible {
     outline: none;
   }
 
-  > div {
-    padding-left: 23px;
-    padding-right: 23px;
-    border-radius: 3px;
-
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-
-    :first-child {
-      display: inline-flex;
-      align-items: center;
-    }
-  }
-
   &.outlined {
-    background-color: variables.$grey-2;
+    background-color: variables.$white;
     color: variables.$grey-2;
     transition: background-color 0s, clip-path 0s !important;
+    @include mixins.miter-border(1, 1, variables.$grey-4);
+  }
 
-    > div {
-      @include mixins.miter-original(1, true);
-      position: relative;
-      background-color: variables.$white;
+  @each $name, $color in variables.$colors {
+    &.#{'' + $name} {
+      background-color: $color;
+      color: variables.$text--white;
 
-      top: 1px;
-      left: 1px;
-      width: calc(100% - 2px);
-      height: calc(100% - 2px);
+      &.outlined {
+        @include mixins.miter-border(1, 1, $color);
+        color: $color;
+        background-color: variables.$white;
+      }
     }
   }
 
@@ -68,19 +52,7 @@
     color: variables.$grey-4 !important;
 
     &.outlined {
-      background-color: variables.$grey-4 !important;
-    }
-  }
-
-  @each $name, $color in variables.$colors {
-    &.#{'' + $name} {
-      background-color: $color;
-      color: $color;
-
-      &:not(.outlined) {
-        background-color: $color;
-        color: variables.$text--white;
-      }
+      @include mixins.miter-border(1, 1, variables.$grey-4);
     }
   }
 }
