--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,6 +1,10 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
+.shadowWrapper {
+  @include mixins.miter-shadow;
+}
+
 .card {
   @include mixins.miter(2);
   @include mixins.miter-border(2, 1, variables.$grey-4, 4);
